fix load flicker

--- a/src/components/hero.module.scss
+++ b/src/components/hero.module.scss
@@ -17,6 +17,7 @@
 .background {
     height: 380px;
     position: relative;
+    background-color: rgb(30 45 56); // fix load flicker
 }
 
 .heroTextbox {
